--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install requirements
         run: |
-          pip install -r requirements-test.txt
+          pip install -r requirements_test.txt
       - name: Check with isort
         run: |
           isort custom_components/openhab tests --check-only
