--- a/custom_components/openhab/manifest.json
+++ b/custom_components/openhab/manifest.json
@@ -5,6 +5,7 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/kubawolanin/ha-openhab/issues",
   "requirements": [
+    "zeroconf",
     "python-openhab==2.16.0"
   ],
   "version": "0.0.1",
